# mizan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/irab/: ARCHITECTURE.md  IMPROVEMENTS.md  SKILL.md
.claude/skills/irab/references/: asaleeb.md  disambiguation.md  grammar-rules.md  roles-and-functions.md  sentence-analysis.md  special-cases.md
.github/: FUNDING.yml
.github/workflows/: test.yml
data/: feminine_nouns.json  irab_training_30.json  verb_transitivity.json
docs/: architecture.md  ibn-aqil-gap-analysis.md  mughni-labib-gap-analysis.md
examples/: examples.md
grammar/: asaleeb.md  disambiguation.md  grammar-rules.md  roles-and-functions.md  sentence-analysis.md  special-cases.md
mcp-server/: analyzer.py  api.py  conjugator.py  disambiguator.py  governor.py
scripts/: build_transitivity_table.py
skill/: SKILL.md
src/mizan/: __init__.py  analyzer.py  api.py  conjugator.py  disambiguator.py  governor.py  server.py
tests/: README.md  answer_key.txt  benchmark_models.py  benchmark_report.py  benchmark_score.py  blind_prompts.txt  blind_test_report.md  conftest.py  run_blind_tests.py  test_api.py  test_case_signs.py  test_data_files.py  test_disambiguator.py  test_governor.py  test_parse_solution.py  test_transitivity.py
web/: index.html
